--- a/package.json
+++ b/package.json
@@ -38,46 +38,46 @@
   "license": "Apache-2.0",
   "scripts": {
     "dev": "NODE_OPTIONS='--inspect' next dev --turbopack",
+    "dev:legacy": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "^15.4.0-canary.19"
+    "next": "^15.4.0-canary.23"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.7.0",
-    "@happykit/flags": "^3.3.0",
     "@hookform/resolvers": "^5.0.1",
     "@next/env": "^15.3.1",
-    "@radix-ui/react-accessible-icon": "^1.1.4",
-    "@radix-ui/react-accordion": "^1.2.8",
-    "@radix-ui/react-alert-dialog": "^1.1.11",
-    "@radix-ui/react-aspect-ratio": "^1.1.4",
-    "@radix-ui/react-avatar": "^1.1.7",
-    "@radix-ui/react-checkbox": "^1.2.3",
-    "@radix-ui/react-collapsible": "^1.1.8",
-    "@radix-ui/react-context-menu": "^2.2.12",
-    "@radix-ui/react-dialog": "^1.1.11",
-    "@radix-ui/react-dropdown-menu": "^2.1.12",
-    "@radix-ui/react-hover-card": "^1.1.11",
+    "@radix-ui/react-accessible-icon": "^1.1.6",
+    "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-alert-dialog": "^1.1.13",
+    "@radix-ui/react-aspect-ratio": "^1.1.6",
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-collapsible": "^1.1.10",
+    "@radix-ui/react-context-menu": "^2.2.14",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-hover-card": "^1.1.13",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.4",
-    "@radix-ui/react-menubar": "^1.1.12",
-    "@radix-ui/react-navigation-menu": "^1.2.10",
-    "@radix-ui/react-popover": "^1.1.11",
-    "@radix-ui/react-progress": "^1.1.4",
-    "@radix-ui/react-radio-group": "^1.3.4",
-    "@radix-ui/react-scroll-area": "^1.2.6",
-    "@radix-ui/react-select": "^2.2.2",
-    "@radix-ui/react-separator": "^1.1.4",
-    "@radix-ui/react-slider": "^1.3.2",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-switch": "^1.2.2",
-    "@radix-ui/react-tabs": "^1.1.9",
-    "@radix-ui/react-toast": "^1.2.11",
-    "@radix-ui/react-toggle-group": "^1.1.7",
-    "@radix-ui/react-toggle": "^1.1.6",
-    "@radix-ui/react-tooltip": "^1.2.4",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-menubar": "^1.1.14",
+    "@radix-ui/react-navigation-menu": "^1.2.12",
+    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-progress": "^1.1.6",
+    "@radix-ui/react-radio-group": "^1.3.6",
+    "@radix-ui/react-scroll-area": "^1.2.8",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-separator": "^1.1.6",
+    "@radix-ui/react-slider": "^1.3.4",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-switch": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.11",
+    "@radix-ui/react-toast": "^1.2.13",
+    "@radix-ui/react-toggle-group": "^1.1.9",
+    "@radix-ui/react-toggle": "^1.1.8",
+    "@radix-ui/react-tooltip": "^1.2.6",
     "@radix-ui/themes": "^3.2.1",
     "@remark-embedder/core": "^3.0.3",
     "@remark-embedder/transformer-oembed": "^5.0.1",
@@ -85,10 +85,10 @@
     "@testing-library/react": "^16.3.0",
     "@types/mdx": "^2.0.13",
     "@types/negotiator": "^0.6.3",
-    "@types/node": "^22.15.3",
+    "@types/node": "^22.15.11",
     "@types/picomatch": "^4.0.0",
     "@types/react-dom": "^19.1.3",
-    "@types/react": "^19.1.2",
+    "@types/react": "^19.1.3",
     "adr-tool": "^0.3.0",
     "babel-plugin-react-compiler": "^19.1.0-rc.1",
     "class-variance-authority": "^0.7.1",
@@ -96,8 +96,9 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "flags": "4.0.1-ff75a409-20250506071241",
     "input-otp": "^1.4.2",
-    "jose": "^6.0.10",
+    "jose": "^6.0.11",
     "lucide-react": "^0.507.0",
     "negotiator": "^1.0.0",
     "next-mdx-remote": "^5.0.0",
@@ -106,8 +107,8 @@
     "postcss": "^8.5.3",
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.1",
-    "react-resizable-panels": "^3.0.0",
+    "react-hook-form": "^7.56.2",
+    "react-resizable-panels": "^3.0.1",
     "react": "^19.1.0",
     "reading-time": "^1.5.0",
     "recharts": "^2.15.3",
@@ -124,6 +125,6 @@
     "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.3",
     "vaul": "^1.1.2",
-    "zod": "^3.24.3"
+    "zod": "^3.24.4"
   }
 }
