--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "format:fix": "deno fmt"
   },
   "dependencies": {
-    "next": "^15.4.0-canary.31"
+    "next": "15.4.0-canary.31"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.0.0-beta.3",
@@ -93,8 +93,8 @@
     "@types/negotiator": "^0.6.3",
     "@types/node": "^22.15.17",
     "@types/picomatch": "^4.0.0",
-    "@types/react-dom": "^19.1.3",
-    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19.1.5",
+    "@types/react": "^19.1.4",
     "adr-tool": "^0.3.0",
     "babel-plugin-react-compiler": "^19.1.0-rc.1",
     "class-variance-authority": "^0.7.1",
@@ -104,7 +104,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "jose": "^6.0.11",
-    "lucide-react": "^0.509.0",
+    "lucide-react": "^0.510.0",
     "negotiator": "^1.0.0",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
@@ -113,7 +113,7 @@
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
-    "react-resizable-panels": "^3.0.1",
+    "react-resizable-panels": "^3.0.2",
     "react": "^19.1.0",
     "reading-time": "^1.5.0",
     "recharts": "^2.15.3",
@@ -125,7 +125,7 @@
     "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.2.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.6",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.3",
