--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -77,6 +77,7 @@ repos:
             src/app/\[slug\]/_components/.*|
             src/app/elements/_components/.*|
             src/app/products/_components/.*|
+            src/app/stories/\[storyslug\]/_components/.*|
             LICENSE|
             README.md|
             README.en.md
