--- a/package.json
+++ b/package.json
@@ -48,53 +48,27 @@
     "format:fix": "deno fmt"
   },
   "dependencies": {
-    "next": "15.4.0-canary.72"
+    "next": "15.4.0-canary.79"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.0.0-beta.6",
     "@faker-js/faker": "^9.8.0",
     "@hookform/resolvers": "^5.1.1",
-    "@next/env": "15.4.0-canary.72",
+    "@next/env": "15.4.0-canary.79",
     "@radix-ui/react-accessible-icon": "^1.1.7",
-    "@radix-ui/react-accordion": "^1.2.11",
-    "@radix-ui/react-alert-dialog": "^1.1.14",
-    "@radix-ui/react-aspect-ratio": "^1.1.7",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-collapsible": "^1.1.11",
-    "@radix-ui/react-context-menu": "^2.2.15",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-hover-card": "^1.1.14",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-menubar": "^1.1.15",
-    "@radix-ui/react-navigation-menu": "^1.2.13",
-    "@radix-ui/react-popover": "^1.1.14",
-    "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-radio-group": "^1.3.7",
-    "@radix-ui/react-scroll-area": "^1.2.9",
-    "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slider": "^1.3.5",
-    "@radix-ui/react-slot": "1.2.0",
-    "@radix-ui/react-switch": "^1.2.5",
-    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
-    "@radix-ui/react-toggle-group": "^1.1.10",
-    "@radix-ui/react-toggle": "^1.1.9",
-    "@radix-ui/react-tooltip": "^1.2.7",
     "@radix-ui/themes": "^3.2.1",
     "@remark-embedder/core": "^3.0.3",
     "@remark-embedder/transformer-oembed": "^5.0.1",
-    "@tailwindcss/postcss": "^4.1.8",
+    "@tailwindcss/postcss": "^4.1.10",
     "@testing-library/react": "^16.3.0",
     "@types/mdx": "^2.0.13",
     "@types/negotiator": "^0.6.4",
-    "@types/node": "^22.15.30",
+    "@types/node": "^24.0.1",
     "@types/picomatch": "^4.0.0",
     "@types/react-dom": "^19.1.6",
-    "@types/react": "^19.1.6",
+    "@types/react": "^19.1.8",
     "adr-tool": "^0.3.0",
     "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "class-variance-authority": "^0.7.1",
@@ -104,12 +78,13 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "jose": "^6.0.11",
-    "lucide-react": "^0.513.0",
+    "lucide-react": "^0.514.0",
     "negotiator": "^1.0.0",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "picomatch": "^4.0.2",
-    "postcss": "^8.5.4",
+    "postcss": "^8.5.5",
+    "radix-ui": "^1.4.2",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
@@ -125,11 +100,11 @@
     "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
     "sonner": "^2.0.5",
-    "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.8",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.10",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5.8.3",
     "vaul": "^1.1.2",
-    "zod": "^3.25.56"
+    "zod": "^3.25.62"
   }
 }
